crates/ruff_python_parser/tests/snapshots/invalid_syntax@global_stmt_empty.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..7,
        body: [
            Global(
                StmtGlobal {
                    node_index: NodeIndex(None),
                    range: 0..6,
                    names: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | global
  |       ^ Syntax Error: Global statement must have at least one name
  |
